--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "scripts": {
-    "start": "tsc && node build/main.js > build/pob-example.xml"
+    "amalg": "./scripts/amalg",
+    "start": "tsc && node --enable-source-maps build/main.js"
   },
   "devDependencies": {
     "@types/node": "^18.7.13",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "fengari-web": "^0.1.4"
   }
 }
